# yolov7-pip

./: pyproject.toml  setup.py
yolov7/: __init__.py
yolov7/models/: common.py  experimental.py
