[project]
name = "yolov7detect"
version = "1.0.3"
authors = [{name = "kadirnar"}]
license = {text = "MIT"}
description = "Packaged version of the Yolov7 repository"
readme = "README.md"
urls = {Homepage = "https://github.com/kadirnar/yolov7-pip"}
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=3.2.2",
    "numpy>=1.18.5",
    "opencv-python-headless>=4.1.1",
    "Pillow>=7.1.2",
    "PyYAML>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.7.0,!=1.12.0",
    "torchvision>=0.8.1,!=0.13.0",
    "tqdm>=4.41.0",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
